# bin2elf

./: .gitignore  CHANGELOG.md  README.md  bin2elf.py  pyproject.toml
bin2elf/: cli.py
