[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "bin2elf"
version = "0.1.0"
description = "Convert a raw binary blob into a minimal ARM ELF at a chosen load address."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  { name = "Tim Abdiukov" }
]
keywords = ["elf", "binutils", "firmware", "reverse engineering", "arm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Security",
  "Intended Audience :: Developers"
]

[project.urls]
Homepage = "https://github.com/TAbdiukov/bin2elf"
Repository = "https://github.com/TAbdiukov/bin2elf"
Issues = "https://github.com/TAbdiukov/bin2elf/issues"

[project.scripts]
bin2elf = "bin2elf.cli:main"
